--- a/work.html
+++ b/work.html
@@ -62,7 +62,7 @@
         <a href="#!">
           <img src="img/projects/openRoads.PNG" alt="Project" style="height: 300px;">
         </a>
-        <a href="ProjectsHtml/openRoads.html" target="_blank" class="btn-light">
+        <a href="ProjectsHtml/openRoads.html" class="btn-light">
           <i class="fas fa-eye"></i> Project
         </a>
         <a href="https://github.com/mehmedcatic/Open-Roads-Rent-A-Car" target="_blank" class="btn-dark">
@@ -73,7 +73,7 @@
         <a href="#!">
           <img src="img/projects/calorieTracker.PNG" alt="Project" style="height: 300px;">
         </a>
-        <a href="ProjectsHtml/calorieTracker.html" target="_blank" class="btn-light">
+        <a href="ProjectsHtml/calorieTracker.html" class="btn-light">
           <i class="fas fa-eye"></i> Project
         </a>
         <a href="https://github.com/mehmedcatic/CalorieTracker_javascript_project" class="btn-dark"  target="_blank">
@@ -84,7 +84,7 @@
         <a href="#!">
           <img src="img/projects/usersCollection.PNG" alt="Project" style="height: 300px;">
         </a>
-        <a href="ProjectsHtml/usersCollection.html" target="_blank" class="btn-light">
+        <a href="ProjectsHtml/usersCollection.html" class="btn-light">
           <i class="fas fa-eye"></i> Project
         </a>
         <a href="https://github.com/mehmedcatic/UsersCollection" class="btn-dark"  target="_blank">
