--- a/ProjectsHtml/openRoads.html
+++ b/ProjectsHtml/openRoads.html
@@ -63,7 +63,7 @@
             <li>If you'd like to learn more about this project click the button on the previous page which will take you to GitHub. Thanks!</li>
         </ul>
     
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/ZfFNmT-8UMg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/ZfFNmT-8UMg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </main>
 
     <footer id="main-footer">
