--- a/ProjectsHtml/usersCollection.html
+++ b/ProjectsHtml/usersCollection.html
@@ -49,7 +49,7 @@
         </nav>
     </header>
 
-    <main id="userCollectionHome" style="background: #444; text-align:center">
+    <main id="usersCollectionHome" style="background: #444; text-align:center">
         <h1 style="font-size: 35px; text-align: center;" >
             UsersCollection
             <span class="text-secondary">- a simple javascript project</span>
