--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
     crossorigin="anonymous">
@@ -59,10 +59,10 @@
     </h2>
     <div class="boxes">
       <div>
-        <span class="text-secondary">Email: </span> mcatic1402@gmail.com
+        <p class="text-secondary">Email: </p> <span class="contactInfo"> mcatic1402@gmail.com </span>
       </div>
       <div>
-        <span class="text-secondary">Phone: </span> +38762 600 961
+        <p class="text-secondary">Phone: </p> <span class="contactInfo"> +38762 600 961 </span>
       </div>
       
     </div>
