--- a/ProjectsHtml/calorieTracker.html
+++ b/ProjectsHtml/calorieTracker.html
@@ -49,7 +49,7 @@
         </nav>
     </header>
 
-    <main id="openRoadsHome" style="background: #444; text-align:center">
+    <main id="calorieTrackerHome" style="background: #444; text-align:center">
         <h1 class="lg-heading">
             Calorie Tracker
             <span class="text-secondary">JavaScript project</span>
