--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
     crossorigin="anonymous">
@@ -58,12 +58,11 @@
       Let me tell you a few things about me...
     </h2>
     <div class="about-info">
-      <img src="img/myPortrait.jpg" style=" width: 300px;
-      height: 300px;" alt="Profile Img" class="bio-image">
+      <img id="portraitImg" src="img/myPortrait.jpg" alt="Profile Img" class="bio-image">
 
       <div class="bio">
         <h3 class="text-secondary">BIO</h3>
-        <p>My name is Mehmed Ćatić. I'm a 23 year old student at Faculty of Information Technologies Mostar. As I'm wrapping up my Bachelor's degree I found myself on a path to find my place in IT industry. I was born and raised in Mostar and currently living there as well. I find myself as a person who thinks "outside the box" and likes to find solutions to the given problems.</p>
+        <p>My name is Mehmed Ćatić. I'm a 23 year old student at the Faculty of Information Technologies Mostar. As I'm wrapping up my Bachelor's degree, I found myself on a path to find my place in the IT industry. I was born and raised in Mostar and currently living there as well. I find myself as a person who thinks "outside the box" and likes to find solutions to the given problems.</p>
       </div>
 
     </div>
