--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
     </h2>
     <div class="boxes">
       <div>
-        <p class="text-secondary">Email: </p> <span class="contactInfo"> mcatic1402@gmail.com </span>
+        <p class="text-secondary">Email: </p> <span class="contactInfo"> mehmed1catic@gmail.com </span>
       </div>
       <div>
         <p class="text-secondary">Phone: </p> <span class="contactInfo"> +38762 600 961 </span>
