--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@
         <p class="text-secondary">Email: </p> <span class="contactInfo"> mehmed1catic@gmail.com </span>
       </div>
       <div>
-        <p class="text-secondary">Phone: </p> <span class="contactInfo"> +38762 600 961 </span>
+        <p class="text-secondary">Phone: </p> <span class="contactInfo"> +387 62 600 961 </span>
       </div>
       
     </div>
